fix: update dependencies and closes #11 - make tests more stable by introducing a test order but also waiting until the funding has been finished